# calculator

./: .gitignore  Calc.java  CalcEngine.java  CalcParser.java  Cargo.toml  README.md  todos.txt
Calculator/: CalcParser.java  CalculatorException.java  Checker.java  Engine.java  Evaluator.java  Expression.java  ExpressionMessage.java  Identifiers.java  Message.java  TestVerifier.java  Tester.java  Verifier.java
src/: Checker.java  Expression.java  Identifiers.java  Practice.java  eval.rs  expr.rs  ident.rs  main.rs  parse.rs  token.rs  utils.rs
