[package]
name = "calc"
version = "0.1.0"
authors = ["sarthakgaur <75014896+sarthakgaur@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
fehler = "1.0.0"
rustyline = "8.2.0"
dirs = "3.0.2"
